--- a/notes/TODO.org
+++ b/notes/TODO.org
@@ -2,11 +2,16 @@
 
 ** code tasks
 
- - [X] remove callableprog.cuh
- - [X] move camera.cuh to scene/ <2020-02-04 Tue>
- - [X] make lib/ directory for .cuh helpers
- - [X] make helper math lib (lib/vector_utils.cuh)
- - [ ] consolidate dot() and cross() if applicable
+- [X] remove callableprog.cuh
+- [X] move camera.cuh to scene/ <2020-02-04 Tue>
+- [X] make lib/ directory for .cuh helpers
+- [X] make helper math lib (lib/vector_utils.cuh)
+- [ ] consolidate dot() and cross() if applicable
+- [ ] add Exception program
+- [ ] push cmake/ and CMakeLists.txt into src/ directory
+   - [ ] move files and update path/relative paths
+   - [ ] check that all targets still build
+   - [ ] Update and trim readme
 
 *** add command line options
 
