add future tasks to TODO

--- a/notes/TODO.org
+++ b/notes/TODO.org
@@ -1,7 +1,22 @@
 
 * TODOs for this project
 
-** code tasks
+
+** feature impl. tasks
+
+- [ ] multiple, selectable scenes
+- [ ] Instances (ch7 TNW) and Group and Transform optixpp objects
+- [ ] Volumes (ch8 TNW) aka participating media
+
+** Rest Of Life feature breakdown
+- [ ] Chapter 4 - Importance Sampling Materials
+- [ ] Chapter 5 - Generating Random Directions
+- [ ] Chapter 6 - Ortho-normal Bases
+- [ ] Chapter 7 - Sampling Lights Directly
+- [ ] Chapter 8 - Mixture Densities
+- [ ] Chapter 10 - Cleaning Up PDF Management
+
+** code cleanup tasks
 
 - [ ] consolidate dot() and cross() if applicable
 - [ ] add Exception program
