--- a/notes/TODO.org
+++ b/notes/TODO.org
@@ -21,16 +21,6 @@
 - [ ] consolidate dot() and cross() if applicable
 - [ ] add Exception program
 
-*** add command line options
-
- - [X] debug (turn on rtPrintf, e.g.)
- - [X] verbose?
- - [X] scene selection
- - [-] image parameters
-   - [ ] image width
-   - [ ] image height
-   - [X] number of samples
-
 
 * DONE
 
@@ -45,3 +35,13 @@
   - [x] move files and update path/relative paths
   - [x] check that all targets still build
   - [x] Update and trim readme
+
+** add command line options
+
+ - [X] debug (turn on rtPrintf, e.g.)
+ - [X] verbose?
+ - [X] scene selection
+ - [X] image parameters
+   - [X] image width
+   - [X] image height
+   - [X] number of samples
